pkl-core/src/test/files/LanguageSnippetTests/input/errors/reference10.pkl
import "pkl:ref"

class D extends ref.Domain {
  function renderReference(reference: ref.Reference<this, Any>): String = throw("not supported")
}
typealias Ref<T> = ref.Reference<D, T>
local d: D = new {}

test = ref.Reference(d, String, "") as Ref<Listing<String(true)>>
